staring modules for supervised predictions

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,7 +8,9 @@ defined below.
 params {
     help = false
     
-    
+    //singleLableColumn = "Classification"
+    singleLabelColumn = "OriginalClasses"
+    singleLabelDelimiter = "|"
     
     
 }
