--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+# Nexflow items
+.nextflow*
+data
+public
+results
+work
+output
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
