small bug fixes

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,8 +8,8 @@ defined below.
 params {
     help = false
     
-    //singleLableColumn = "Classification"
-    singleLabelColumn = "OriginalClasses"
+    singleLabelColumn = "Classification"
+    //singleLabelColumn = "OriginalClasses"
     singleLabelDelimiter = "|"
     
     
