add table to count the original input labels provided

--- a/nextflow.config
+++ b/nextflow.config
@@ -8,12 +8,14 @@ defined below.
 params {
     help = false
     
+    // Column name in the input spreadsheet that contains the concatinated list of marker labels.
     singleLabelColumn = "Classification"
     //singleLabelColumn = "OriginalClasses"
     singleLabelDelimiter = "|"
     
-    
-    
+    // Rough estimator of bottom percentile belonging to negative labelling
+    huerustic_negative_percentile = 0.2
+    huerustic_negative_n_cells = 400
     
     
     
