added imputed negative labels and fixed loop bug in prediction

--- a/nextflow.config
+++ b/nextflow.config
@@ -13,9 +13,9 @@ params {
     //singleLabelColumn = "OriginalClasses"
     singleLabelDelimiter = "|"
     
-    // Rough estimator of bottom percentile belonging to negative labelling
-    huerustic_negative_percentile = 0.2
-    huerustic_negative_n_cells = 400
+    // Rough estimator of bottom percentile belonging to negative labelling (1-99 percentile)
+    huerustic_negative_percentile = 12 
+    huerustic_negative_n_cells = 16
     
     
     
