added simple approximate normalization from previous workflow

--- a/nextflow.config
+++ b/nextflow.config
@@ -12,6 +12,11 @@ params {
     singleLabelColumn = "Classification"
     //singleLabelColumn = "OriginalClasses"
     singleLabelDelimiter = "|"
+    qupath_object_type = "DetectionObject"
+    nucleus_marker = "DAPI"
+    
+    use_boxcox_transformation = true
+    transformation_group_by_column = "Image"
     
     // Rough estimator of bottom percentile belonging to negative labelling (1-99 percentile)
     huerustic_negative_percentile = 12 
