update core nf structure

--- a/nextflow.config
+++ b/nextflow.config
@@ -5,6 +5,17 @@ Any parameters provided by the user with a -params-file or
 with -- command-line arguments will override the values
 defined below.
 */
+
+profiles {
+  slurm {
+    includeConfig 'conf/slurm.config'
+  }
+  local {
+    includeConfig 'conf/local.config'
+  }
+}
+
+
 params {
     help = false
     
@@ -13,14 +24,14 @@ params {
     //singleLabelColumn = "OriginalClasses"
     singleLabelDelimiter = "|"
     qupath_object_type = "DetectionObject"
-    nucleus_marker = "DAPI"
+    nucleus_marker = "NA2"
     
     use_boxcox_transformation = true
     transformation_group_by_column = "Image"
     
     // Rough estimator of bottom percentile belonging to negative labelling (1-99 percentile)
     huerustic_negative_percentile = 12 
-    huerustic_negative_n_cells = 16
+    huerustic_negative_n_cells = 8
     
     
     
