updating main wf

--- a/nextflow.config
+++ b/nextflow.config
@@ -23,7 +23,9 @@ params {
     singleLabelColumn = "Classification"
     //singleLabelColumn = "OriginalClasses"
     singleLabelDelimiter = "|"
-    qupath_object_type = "DetectionObject"
+    //qupath_object_type = "DetectionObject"
+    qupath_object_type = "CellObject"
+
     nucleus_marker = "NA2"
     
     use_boxcox_transformation = true
