update all nextflow worflows

--- a/conf/slurm.config
+++ b/conf/slurm.config
@@ -1,10 +1,23 @@
 process.executor = 'slurm'
 process.queue = 'med-n16-64g'
-process.clusterOptions = '--cpus-per-task 6 --mem 6G'
+process.clusterOptions = '--cpus-per-task 6 --mem 32G'
 process.time = '2h'
+
+
+withName: BOOST_NEGATIVE_LABELS {
+    executor = 'slurm'
+    queue = 'med-n16-64g-pre'
+    clusterOptions = '--cpus-per-task 6 --mem 62G'
+}
 
 withName: BOXCOX_TRANSFORM {
     executor = 'slurm'
     queue = 'med-n16-64g-pre'
-    clusterOptions = '--cpus-per-task 12 --mem 16G'
+    clusterOptions = '--cpus-per-task 12 --mem 64G'
+}
+
+withName: MERGE_BY_PRED_IMAGE {
+    executor = 'slurm'
+    queue = 'med-n16-64g'
+    clusterOptions = '--cpus-per-task 12 --mem 64G'
 }
