--- a/nextflow.config
+++ b/nextflow.config
@@ -21,12 +21,14 @@ params {
     
     // Column name in the input spreadsheet that contains the concatinated list of marker labels.
     singleLabelColumn = "Classification"
+    keptContextColumns = ["Image", " Centroid X µm", "Centroid Y µm"]
     //singleLabelColumn = "OriginalClasses"
     singleLabelDelimiter = "|"
     //qupath_object_type = "DetectionObject"
     qupath_object_type = "CellObject"
 
-    nucleus_marker = "NA2"
+    //nucleus_marker = "NA2"
+    nucleus_marker = "DAPI_AF_R01"
     
     use_boxcox_transformation = true
     transformation_group_by_column = "Image"
@@ -34,7 +36,7 @@ params {
     // Rough estimator of bottom percentile belonging to negative labelling (1-99 percentile)
     huerustic_negative_percentile = 12 
     huerustic_negative_n_cells = 8
+    huerustic_negative_add_only_missing = "True"
     
-    
-    
+    hasFOV = false
 }
